Fixed the page Overflow issue

--- a/css/landing-page.css
+++ b/css/landing-page.css
@@ -5,7 +5,7 @@
   background-position: center;
   background-size: cover;
   height: 750px;
-  width: 100vw;
+  width: 100%;
 }
 
 
